# gallery-dl

./: pyproject.toml
.github/workflows/: tests_branch.yml
docs/: configuration.rst
gallery_dl/: __main__.py  config.py  job.py  path.py  util.py
gallery_dl/Models/: Deviantart.py
gallery_dl/extractor/: deviantart.py  deviantartV2.py  deviantart_br.py  deviantart_old.py  discord.py  fanbox.py  flickr.py  kemonoparty.py  meanbitches.py  newgrounds.py  oauth.py  patreon.py  shimmie2.py  subscribestar.py
gallery_dl/postprocessor/: common.py  exec.py
test/results/: deviantart.py
